--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             z-index: 2;
             cursor: pointer;
             transition: opacity 0.3s;
+            border-radius: 50%;
           }
 
           .circle-icon-active {
@@ -98,13 +99,13 @@
             <div class="circles-background">
               <img src="images/Diagram bg.png">
             </div>
-            <div class="circle circle-analytics">
+            <div class="circle circle-data">
               <div class="circle-content">
                 <div class="circle-icon">
-                  <img src="images/Diagram Analytics icon.png">
+                  <img src="images/Diagram Data Icon.png">
                 </div>
                 <div class="circle-img">
-                  <img src="images/Diagram Analytics Circul wo lines.png">
+                  <img src="images/Diagram Data Circle.png">
                 </div>
               </div>
             </div>
@@ -118,13 +119,13 @@
                 </div>
               </div>
             </div>
-            <div class="circle circle-data">
+            <div class="circle circle-analytics">
               <div class="circle-content">
                 <div class="circle-icon">
-                  <img src="images/Diagram Data Icon.png">
+                  <img src="images/Diagram Analytics icon.png">
                 </div>
                 <div class="circle-img">
-                  <img src="images/Diagram Data Circle.png">
+                  <img src="images/Diagram Analytics Circul wo lines.png">
                 </div>
               </div>
             </div>
