--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <title>Blank HTML5</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <style>
+
+          body {
+            background-color: #080E57;
+          }
+          
           .circle {
             width: 470px;
             height: 470px;
@@ -81,7 +86,8 @@
 
           .circles-wrapper {
             position: relative;
-            background-color: #080E57;
+           
+            max-width: 1400px;
           }
 
           .circles-background {
