added right boxes background

--- a/index.html
+++ b/index.html
@@ -219,14 +219,15 @@
 
           .description-side {
             flex: 1;
-            margin: 0 50px;
+            margin-left: 50px;
+            margin-right: 100px;
           }
 
           .description-box {
-            width: 100%;
             position: relative;
             color: #FFF;
             padding: 20px;
+            margin-bottom: 10px;
           }
 
           .description-box-background {
@@ -298,7 +299,7 @@
           .description-box-body {
             font-size: 18px;
             line-height: 1.2;
-            padding: 10px 20px 90px 20px;
+            padding: 10px 20px 20px 20px;
           }
 
         </style>
