--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <style>
 
+          @font-face {
+              font-family: Futura;
+              font-weight: 300;
+              src: url("fonts/FuturaStd-Medium.otf") format("opentype");
+          }
+
+          @font-face {
+              font-family: Futura;
+              font-weight: bold;
+              src: url("fonts/FuturaStd-Bold.otf") format("opentype");
+          }
+
+          @font-face {
+              font-family: Avenir;
+              font-weight: 300;
+              src: url("fonts/Avenir.ttc") format("opentype");
+          }
+
+
           body {
             background-color: #080E57;
+          }
+
+          .header-title {
+            font-size: 72px;
+            font-weight: bold;
+            line-height: 1.3;
+            color: #FFFFFF;
+            padding: 30px 100px;
+            font-family: Futura;
           }
 
           .content {
@@ -72,7 +100,7 @@
             height: 80px;
             z-index: 2;
             cursor: pointer;
-            transition: opacity 0.3s;
+            transition: all 0.3s;
             border-radius: 50%;
           }
 
@@ -86,6 +114,8 @@
 
           .circle-icon:hover {
             opacity: 1;
+            transform: scale(1.25);
+            z-index: 3;
           }
 
           .circles-wrapper {
@@ -108,6 +138,7 @@
             color: #FFFFFF;
             z-index: 3;
             transition: all 0.3s;
+            font-family: Avenir;
           }
 
           .box-top {
@@ -199,15 +230,6 @@
             opacity: 0.85;
           }
 
-          .header-title {
-            font-size: 72px;
-            font-weight: bold;
-            line-height: 1.3;
-            color: #FFFFFF;
-            padding: 30px 100px;
-            
-          }
-
           .text-cloud {
             color: #EE576E;
           }
@@ -258,6 +280,7 @@
             padding: 0 20px;
             display: flex;
             align-items: center;
+            font-family: Futura;
           }
 
           .description-box-img {
@@ -310,6 +333,7 @@
             font-size: 18px;
             line-height: 1.2;
             padding: 10px 20px 20px 20px;
+            font-family: Avenir;
           }
 
         </style>
