--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
           // Optional parameters
           
           loop: true,
-          autoHeight: true,
+         // autoHeight: true,
           calculateHeight:true,
 
           // If we need pagination
