--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <title>Blank HTML5</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <link
@@ -81,6 +82,11 @@
             position: relative;
             padding-bottom: 30px;
             transition: none;
+          }
+
+          .swiper .box.box-active {
+            width: auto;
+            margin: 0 30px;
           }
 
           .swiper .box .box-body {
